--- a/project1/webapp/css/style.css
+++ b/project1/webapp/css/style.css
@@ -142,13 +142,19 @@
     flex-direction: column;
     justify-content: space-between;
 }
-
-.section-image {
-    margin-bottom: 5px;
+.section-image .sapMImg {
+    width: 380px !important;
+    height: 320px !important;
+    object-fit: cover;
+     margin-bottom: 5px;
     border-radius: 12px;
     overflow: hidden;
     max-width: 100%;
 }
+
+/* .section-image {
+   
+} */
 .hr-text {
     font-weight: 700;
     font-size: 1.15rem;
@@ -157,4 +163,178 @@
 .description-text {
     font-size: 1rem;
     margin-bottom: 18px;
+}
+.tileFullWidth .sapMGT {
+  width: 100% !important;
+  min-width: 0 !important;
+  max-width: none !important;
+}
+
+.tileFullWidth .sapMGTBackgroundImg {
+  background-size: cover !important;
+  background-position: center !important;
+}
+.customTileSlide{
+    background-image:url("../image/washingRoom.png");
+    background-size:cover;
+    background-position:center;
+}
+.customTileSlide2{
+  background-image:url("../image/FoodRoom.png");
+    background-size:cover;
+    background-position:center;
+}
+.slideHBox1{
+    background:rgba(0,0,0,0.3);
+}
+
+/* Contact page */
+.contact-hero {
+    background-image: url("../image/washingRoom.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    text-align: center;
+    border-radius: 0.6rem;
+}
+.contact-hero::after {
+    content: "";
+    position: absolute;
+    top: 0; left: 0; right: 0; bottom: 0;
+    background: rgba(0,0,0,0.3);
+    z-index: 1;
+}
+.contact-hero-title {
+    color: #FFFFFF;
+    font-size: clamp(1.5rem, 6vw, 3.5rem); /* scales between 1.5rem and 3.5rem based on viewport width */
+    font-weight: 700;
+    margin: 0; /* remove negative margin */
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    font-family: "Poppins", "Segoe UI", sans-serif;
+    text-shadow: 2px 2px 10px rgba(0,0,0,0.8);
+    z-index: 2;
+    transition: all 0.3s ease-in-out;
+}
+.contact-hero-title:hover {
+    color: #1477e1;
+    transform: scale(1.2);
+    text-shadow: 4px 4px 10px rgba(0,0,0,0.9);
+    cursor: pointer;
+}
+
+@media (max-width: 480px) {
+    .contact-hero-title {
+        letter-spacing: 1px;
+    }
+}
+
+.contact-flex {
+  display: flex;
+  justify-content: start; /* align items to left */
+  align-items: stretch;
+  gap: 0; /* no space between */
+  margin: 0 auto;
+  width: 90%;
+  height: 50%;
+  flex-wrap: wrap; /* stack on mobile */
+}
+.contact-subtitle {
+    text-align: left;
+}
+.contact-text {
+   font-size: 1.5rem;
+    color: #0064d9 !important;
+    margin: 20px 0;
+    text-align: left;
+    font-weight: bold;
+}
+.contact-address-box {
+  background: #2b79d1;
+  color: #fff !important;
+  border-radius: 8px;
+  padding: 1.5rem;
+  width: 20%; /* fixed width */
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  font-size: 1.2rem !important;
+}
+@media (max-width: 768px) {
+  .contact-address-box, .contact-map-box {
+    color: #fff !important;
+    width: 100%; /* stack vertically */
+    margin-bottom: 1rem;
+  }
+}
+
+
+.contact-address-box a,
+.contact-address-box .sapMText,
+.contact-address-box .sapMLnk {
+    color: #fff !important;
+    font-size: 14px;
+    text-decoration: none; /* optional, removes underline */
+}
+.compName{
+   font-size: 1.3rem !important;
+    font-weight: bold;
+}
+.newcompName{
+    font-weight: bold;
+    line-height: 1.8;  
+}
+
+.oldCompName{
+   font-size: 1.2rem !important;
+    font-weight: bold; 
+}
+.contact-map-box {
+  flex-grow: 1; /* take remaining space */
+  flex-shrink: 1;
+  flex-basis: auto;
+  border-radius:  8px 0 0 8px;
+}
+ 
+/* Footer */
+
+.footer-bar {
+  background-color:#0064d9;
+  padding: 15px 40px;
+  color: #fff;
+  display: flex;
+  flex-wrap: wrap;
+  border-radius: 8px 8px 0 0;
+  margin-top: 3rem;
+}
+.footer-text {
+  color: #fff;
+  font-size: 14px;
+}
+.footer-social {
+  gap: 20px;
+}
+@media (max-width: 768px) {
+  .footer-bar {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    /* gap: 15px; */
+    margin-top: 2rem;
+  }
+
+  .footer-links {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .footer-social {
+    justify-content: center;
+  }
 }
