--- a/project1/webapp/css/style.css
+++ b/project1/webapp/css/style.css
@@ -338,3 +338,9 @@
     justify-content: center;
   }
 }
+.customPageTitle{
+    font-size: 20px !important;
+    font-weight: bold !important;
+    color: #333333 !important;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
