--- a/project1/webapp/css/style.css
+++ b/project1/webapp/css/style.css
@@ -131,8 +131,7 @@
 .HostelCard {
     background: #1bb2bf;
     color: #fff;
-    height: 450px !important;
-    
+    height:auto !important;
     max-width: 370px;
     margin: 20px auto 10px auto;
     border-radius: 18px;
@@ -141,10 +140,10 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-}
+} 
 .section-image .sapMImg {
-    width: 380px !important;
-    height: 320px !important;
+    width: 350px !important;
+    height: 300px !important;
     object-fit: cover;
      margin-bottom: 5px;
     border-radius: 12px;
@@ -300,6 +299,22 @@
   flex-shrink: 1;
   flex-basis: auto;
   border-radius:  8px 0 0 8px;
+}
+.map-responsive {
+  position: relative;
+  width: 100%;
+  max-width: 100%;
+  aspect-ratio: 16 / 9;
+  overflow: hidden;
+   border-radius: 0 8px 8px 0;
+}
+
+.map-responsive iframe {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%; height: 100%;
+  border: 0;
+   border-radius: 8px 0 0 8px;
 }
  
 /* Footer */
