--- a/project1/webapp/view/Admin.view.xml
+++ b/project1/webapp/view/Admin.view.xml
@@ -105,7 +105,7 @@
                             type="Accept"
                         />
                          <Button
-                            text="Manage Room Information"
+                            text="Add Bed"
                             press="HM_RoomDetails"
                             type="Transparent"
                         />
