--- a/project1/webapp/css/style.css
+++ b/project1/webapp/css/style.css
@@ -415,6 +415,7 @@
     border-radius: 18px !important;            /* Circle icon */
     padding: 5px !important;                   /* Add space around icon */
     margin-right: 8px;
+    height: 20px !important;
 }
 
 .customSearchBar input::-webkit-input-placeholder { color: #999; font-size: 1.1em;}
